src/components/hero-components/popup/hero-spell/hero-spell.css
.padding_5 {
    padding: 5px;
}

.padding_13 {
    padding: 13px;
}

.force_0_margin {
    margin: 0 !important;
}

.popup_title_font {
    letter-spacing: 1px;
    text-shadow: black 1px 1px;
    font-weight: bold;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    line-height: 50px;
}

.popup_spell_target_label {
    color: rgb(149, 165, 166);
}

.font-weight-500 {
    font-weight: 500;
}

